Fix RootMenu and preview pane layout on narrow screens
RootMenu was hidden with a fixed pixel offset (right: -100px) that assumed
a max button width. Edit mode buttons are wider, causing them to bleed into
the viewport. Replaced with transform: translateX(calc(100% + 10px)) so the
menu always shifts off-screen by its own width regardless of content.

Preview pane was absolutely positioned relative to the fixed RootMenu with
a hardcoded width and negative top offset, pushing it off-screen on narrow
viewports. On screens <= 1100px it now uses position: fixed to fill the
viewport with 10px margins.

--- a/src/App.css
+++ b/src/App.css
@@ -515,25 +515,30 @@ div.RootMenu button.slideTrigger {
 
 @media only screen and (max-width: 1100px) {
   div.RootMenu {
-    right: -100px;
+    transform: translateX(calc(100% + 10px));
   }
 
   div.RootMenu.displayNarrow {
-    right:0px;
+    right: 0px;
+    transform: none;
   }
+
   div.RootMenu button.slideTrigger {
-    right: 30px;
     position: absolute;
-    display:block;
+    left: -28px;
+    top: 0;
+    display: block;
   }
+
   div.RootMenu button.slideTrigger.open {
-    right: unset;
     position: unset;
+    left: unset;
+    top: unset;
   }
+
   div.RootMenu button.slideTrigger::before {
     content: '\25C0 ';
     color: gray;
-    right: 10px;
   }
 
   div.RootMenu button.slideTrigger.open::before {
